--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   horizontalcalender: ^0.0.4
+  firebase_auth: ^4.7.2
+  cloud_firestore: ^4.8.4
+  firebase_core: ^2.15.0
 
 dev_dependencies:
   flutter_test:
